k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: serverless-tracing
  labels:
    name: serverless-tracing
